--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-2">
           <h3 class="content-subhead">
             <i class="fa fa-users"></i>
-            Verwalte mehrere Personen
+            Verwaltung mehrerer Personen
           </h3>
           <p>
             Ob die eigenen Kinder oder die verschiedenen Arten von Kontaktinformationen (privat, beruflich usw.) verwalte mit einer App mehrere Identit&auml;ten.
@@ -126,7 +126,7 @@
       </div>
       <div class="pure-u-1 pure-u-md-1-3 pure-u-lg-1-4 padding-bottom">
         <div class="pure-g">
-          <div class="pure-u-1">Geschäftsführer: Stephan Hauber</div>
+          <div class="pure-u-1">Gesch&auml;ftsf&uuml;hrer: Stephan Hauber</div>
           <div class="pure-u-1">USt.-ID: DE137210661</div>
           <div class="pure-u-1">Handelsregister: HRA 7352 FF</div>
           <div class="pure-u-1">Frankfurt (Oder)</div>
@@ -134,7 +134,7 @@
       </div>
       <div class="pure-u-1 pure-u-md-1 pure-u-lg-1-4 is-center">
         <div class="pure-g">
-          <div class="pure-u-1"><a href="/privacyNote.html"><span class="fa fa-external-link-alt"></span> Datenschutzerklärung</a></div>
+          <div class="pure-u-1"><a href="/privacyNote.html"><span class="fa fa-external-link-alt"></span> Datenschutzerkl&auml;rung</a>&nbsp;(<a href="privacyNote_en.html">en</a>)</div>
         </div>
       </div>
     </div>
