--- a/privacyNote_en.html
+++ b/privacyNote_en.html
@@ -11,7 +11,7 @@
   <link rel="manifest" href="images/favicon/site.webmanifest">
   
   <meta name="description" content="Kontaktliste App">
-  <title>Kontaktliste App - Datenschutzerkl&auml;rung</title>
+  <title>Kontaktliste App - Privacy Policy</title>
 
   <!-- CSS -->
   <link rel="stylesheet" href="css/pure-min.css">
@@ -50,72 +50,71 @@
     </div> -->
   <div class="content-privacy">
 
-    <h2 class="is-center"><span class="fa fa-user-shield "></span>&nbsp;Datenschutzrichtlinie</h2>
+    <h2 class="is-center"><span class="fa fa-user-shield "></span>&nbsp;Privacy Policy</h2>
 
     <div class="pure-g">
       <div class="l-box-lrg pure-u-1">
         <p class="is-center">
-          Die HSH Soft- &amp; Hardware Vertiebs GmbH Datenschutzrichtlinie wurde am 27. Oktober 2020 aktualisiert.
+          The HSH Soft- &amp; Hardware Vertiebs GmbH privacy policy was updated on October 29, 2020.
         </p>
         <p>
-          Pers&ouml;nlichkeitsrechte sind der HSH Soft- &amp; Hardware Vertriebs GmbH wichtig. Deshalb haben wir eine
-          Datenschutzrichtlinie
-          entwickelt, die regelt, wie wir Daten erheben, verwenden, offenlegen, weitergeben und speichern.
-        </p>
-      </div>
-    </div>
-
-    <h3 class="is-center">TL;DR - unjuristische Kurzfassung</h3>
-
-    <div class="pure-g">
-      <div class="l-box-lrg pure-u-1 ">
-        <p>
-          Wir, die HSH Soft- &amp; Hardware Vertriebs GmbH, sammeln <strong>keine</strong> (Personen-)Daten und verwenden diese auch <strong>nicht</strong> f&uuml;r andere Zwecke wie Statistiken, Werbung usw.
-        </p>
-        <p>
-          Die von Ihnen eingegebenen Personendaten (Vorname, Nachname, Stra&szlig;e, Hausnummer, Postleitzahl, Ort, Telefonnummer und E-Mail-Adresse) verbleiben auf Ihrem Ger&auml;t. Sie selbst entscheiden, mit wem Sie diese Daten teilen bzw. an wen (Dritten) Sie sie weitergeben (QR-Code Scan). Es obliegt diesem Dritten diese Daten vertrauensw&uuml;rdig zu behandeln und sie nur in einem berechtigten Fall an berechtigte weitere Dritte weiterzugeben. Das Gleiche gilt nat&uuml;rlich f&uuml;r Sie und ihre gescannten Kontakte.
+          Personal rights are important to HSH Soft- &amp; Hardware Vertriebs GmbH. That is why we have developed a privacy policy
+          that regulates how we collect, use, disclose, share and store data.
         </p>
       </div>
     </div>
 
-    <h3 class="is-center">Sammeln und Verwenden personenbezogener Daten</h3>
+    <h3 class="is-center">TL;DR - non-legal abstract</h3>
 
     <div class="pure-g">
       <div class="l-box-lrg pure-u-1 ">
         <p>
-          Personenbezogene Daten sind Daten, die verwendet werden k&ouml;nnen, um eine Person zu identifizieren oder um eine bestimmte Person zu kontaktieren.
+          We, the HSH Soft- &amp; Hardware Vertriebs GmbH collect <strong>none</strong> (Personal) data and do <strong>not</strong> use it for other purposes such as statistics, advertising, etc.
         </p>
         <p>
-          Zur Nutzung dieser App werden Sie gebeten, Ihre personenbezogenen Daten anzugeben. Diese werden dann durch Sie an Dritte &uuml;bergeben. Die Daten werden verschl&uuml;sselt bei diesem Dritten auf dessen Ger&auml;t gespeichert. Sollte bei diesem Dritten eine Covid-19 Infektion bekannt werden, kann dieser die verschl&uuml;sselten Daten direkt an das zust&auml;ndige Gesundheitsamt &uuml;bermitteln. Sie k&ouml;nnen ebenfalls Ihre gesammelten Kontakte im Fall einer Covid-19 Infektion an das zust&auml;ndige Gesundheitsamt &uuml;bermitteln. Das Gesundheitsamt erh&auml;lt von der HSH Soft- und Hardware Vertriebs GmbH einen Einmal-Schl&uuml;ssel zum Entschl&uuml;sseln der Daten.
+          The personal data you enter (first name, last name, street, house number, postal code, locality and telephone number) remain on your phone. You alone decide with whom you share this data or with whom you pass it on (QR code scan). It is then up to this person to treat this data as trustworthy and pass it on to authorized third parties in a justified case only. The same of course applies to you and your saved contacts.
+        </p>
+      </div>
+    </div>
+
+    <h3 class="is-center">Collect and use personal data</h3>
+
+    <div class="pure-g">
+      <div class="l-box-lrg pure-u-1 ">
+        <p>
+          Personal data is data that can be used to identify a person or to contact a specific person.
+        </p>
+        <p>
+          You will be asked to provide personal data to use this app. You will then pass these on to third parties. This data is then encrypted with this third party on the device. If there is a Covid-19 case with this third party, he can transmit this encrypted data directly to the responsible health authority. You can also send the contacts you have collected in the event of a Covid-19 infection to the responsible health authority. The health department then receives a one-time key from HSH Soft- &amp; Hardware Vertriebs GmbH to decrypt the data.
         </p>
       </div>
     
       <div class="l-box-lrg pure-u-1 is-center">
         <p>
-          <strong>Ihre personenbezogenen Daten verlassen Ihr Ger&auml;t ausschlie&szlig;lich durch Ihre Zustimmung und Ihre Interaktion.</strong>
+          <strong>Your personal data will never leave your device without your consent and interaction.</strong>
         </p>
       </div>
     </div>
 
-    <h3 class="is-center">Welche personenbezogenen Daten erheben wir?</h3>
+    <h3 class="is-center">What personal data do we collect?</h3>
     <div class="pure-g">
       <div class="l-box-lrg pure-u-1 is-center">
-        <h4><span class="fa fa-shield-alt"></span>&nbsp;Daten zur Identifaktion der Person</h4>
+        <h4><span class="fa fa-shield-alt"></span>&nbsp;Data to identify the person</h4>
         <div class="pure-g">
           <div class="pure-u-1 ">
-            <p>Vorname(n) und Nachname</p>
+            <p>First name(s) and last name</p>
           </div>
         </div>
-        <h4><span class="fa fa-shield-alt"></span>&nbsp;Daten zum Kontaktieren der Person</h4>
+        <h4><span class="fa fa-shield-alt"></span>&nbsp;Data for contacting the person</h4>
         <div class="pure-g">
           <div class="pure-u-1 ">
-            <p>Anschrift (umfasst Stra&szlig;e, Hausnummer, Postleitzahl und Ort)</p>
+            <p>Address (includes street, house number, postal code and locality)</p>
           </div>
           <div class="pure-u-1 ">
-            <p>Telefonnummer</p>
+            <p>telephone number</p>
           </div>
           <div class="pure-u-1 ">
-            <p>E-Mail-Adresse</p>
+            <p>E-mail address</p>
           </div>
         </div>
       </div>
