--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
         </p>
         <p>
           <!-- <a href="http://purecss.io" class="pure-button pure-button-primary">Get Started</a> -->
-          <a class="appStoreLink" href="https://apps.apple.com/us/app/scriptable/id1405459188?uo=4"><img class="appStore"
-              src="images/appstore.png"></a>
+          <!-- <a class="appStoreLink" href="https://apps.apple.com/us/app/scriptable/id1405459188?uo=4"> -->
+            <img class="appStore" src="images/appstore.png">
+          <!-- </a> -->
         </p>
       </div>
       
@@ -76,11 +77,11 @@
         </div>
         <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-2">
           <h3 class="content-subhead">
-            <i class="fa fa-share-square"></i>
-            Verschl&uuml;sselte Datenweitergabe
+            <i class="fa fa-ghost"></i>
+            Recht auf Vergessen
           </h3>
           <p>
-            Kontaktliste nach Datum und Uhrzeit filtern. Verschl&uuml;sselte Kontaktdaten exportieren und an die entsprechende Beh&ouml;rde weitergeben.
+            Bestimme selbst, wie lange deine Daten bei anderen gespeichert werden und wof&uuml;r sie verwendet werden.
           </p>
         </div>
         <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-2">
@@ -98,7 +99,7 @@
             Datenschutz
           </h3>
           <p>
-            Bestimme selbst, wie lange deine Daten gespeichert werden und wof&uuml;r sie verwendet werden.
+            Die Kontaktdaten werden niemals an einen Server &uuml;bermittelt und ausschlie&szlig;lich auf dem Telefon gespeichert.
           </p>
         </div>
       </div>
@@ -134,7 +135,7 @@
       </div>
       <div class="pure-u-1 pure-u-md-1 pure-u-lg-1-4 is-center">
         <div class="pure-g">
-          <div class="pure-u-1"><a href="/privacyNote.html"><span class="fa fa-external-link-alt"></span> Datenschutzerkl&auml;rung</a>&nbsp;(<a href="privacyNote_en.html">en</a>)</div>
+          <div class="pure-u-1"><a href="/privacyNote.html"><span class="fa fa-external-link-alt"></span> Datenschutzerkl&auml;rung</a>&nbsp;(<a href="privacyNote_en.html">Privacy Policy</a>)</div>
         </div>
       </div>
     </div>
