--- a/privacyNote.html
+++ b/privacyNote.html
@@ -55,7 +55,7 @@
     <div class="pure-g">
       <div class="l-box-lrg pure-u-1">
         <p class="is-center">
-          Die HSH Soft- &amp; Hardware Vertiebs GmbH Datenschutzrichtlinie wurde am 27. Oktober 2020 aktualisiert.
+          Die HSH Soft- &amp; Hardware Vertriebs GmbH Datenschutzrichtlinie wurde am 27. Oktober 2020 aktualisiert.
         </p>
         <p>
           Pers&ouml;nlichkeitsrechte sind der HSH Soft- &amp; Hardware Vertriebs GmbH wichtig. Deshalb haben wir eine
@@ -86,7 +86,7 @@
           Personenbezogene Daten sind Daten, die verwendet werden k&ouml;nnen, um eine Person zu identifizieren oder um eine bestimmte Person zu kontaktieren.
         </p>
         <p>
-          Zur Nutzung dieser App werden Sie gebeten, Ihre personenbezogenen Daten anzugeben. Diese werden dann durch Sie an Dritte &uuml;bergeben. Die Daten werden verschl&uuml;sselt bei diesem Dritten auf dessen Ger&auml;t gespeichert. Sollte bei diesem Dritten eine Covid-19 Infektion bekannt werden, kann dieser die verschl&uuml;sselten Daten direkt an das zust&auml;ndige Gesundheitsamt &uuml;bermitteln. Sie k&ouml;nnen ebenfalls Ihre gesammelten Kontakte im Fall einer Covid-19 Infektion an das zust&auml;ndige Gesundheitsamt &uuml;bermitteln. Das Gesundheitsamt erh&auml;lt von der HSH Soft- und Hardware Vertriebs GmbH einen Einmal-Schl&uuml;ssel zum Entschl&uuml;sseln der Daten.
+          Zur Nutzung dieser App werden Sie gebeten, Ihre personenbezogenen Daten anzugeben. Diese werden dann durch Sie an Dritte &uuml;bergeben. Die Daten werden bei diesem Dritten auf dessen Ger&auml;t gespeichert. 
         </p>
       </div>
     
