--- a/privacyNote_en.html
+++ b/privacyNote_en.html
@@ -55,7 +55,7 @@
     <div class="pure-g">
       <div class="l-box-lrg pure-u-1">
         <p class="is-center">
-          The HSH Soft- &amp; Hardware Vertiebs GmbH privacy policy was updated on October 29, 2020.
+          The HSH Soft- &amp; Hardware Vertriebs GmbH privacy policy was updated on October 29, 2020.
         </p>
         <p>
           Personal rights are important to HSH Soft- &amp; Hardware Vertriebs GmbH. That is why we have developed a privacy policy
@@ -85,7 +85,7 @@
           Personal data is data that can be used to identify a person or to contact a specific person.
         </p>
         <p>
-          You will be asked to provide personal data to use this app. You will then pass these on to third parties. This data is then encrypted with this third party on the device. If there is a Covid-19 case with this third party, he can transmit this encrypted data directly to the responsible health authority. You can also send the contacts you have collected in the event of a Covid-19 infection to the responsible health authority. The health department then receives a one-time key from HSH Soft- &amp; Hardware Vertriebs GmbH to decrypt the data.
+          You will be asked to provide personal data to use this app. You will then pass these on to third parties. This data is then  with this third party on the device.
         </p>
       </div>
     
